# gitcord

./: .env.example  .gitignore  BOT_SETUP.md  COG_MODULARIZATION.md  CONTRIBUTING.md  GENERAL_MODULARIZATION_COMPLETE.md  README.md  README_MODULAR.md  REFACTORING_SUMMARY.md  VIEWS_MODULARIZATION.md  bot.py  main.py  pyproject.toml  requirements.txt  setup.py  setup_env.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: codeql.yml  greetings.yml  main.yml  mdbook.yml
.kiro/specs/gitcord-comprehensive-spec/: design.md  requirements.md  tasks.md
branding/: logo.xcf
docs/: book.toml  custom.css  custom.js
docs/src/: SUMMARY.md  introduction.md
docs/src/api-reference/: bot.md
docs/src/getting-started/: configuration.md  installation.md  quick-start.md
docs/src/templates/: category-templates.md  channel-templates.md  custom-templates.md
docs/src/troubleshooting/: common-issues.md  debug-mode.md  error-messages.md
docs/src/user-guide/: categories.md  channel-management.md  commands.md  permissions.md  rate-limiting.md
gitcord/: __init__.py  bot.py  config.py  events.py
gitcord/cogs/: __init__.py  general.py
gitcord/utils/: __init__.py  helpers.py  logger.py
roadmap/: poc.md  prototype.md
src/: .template_source.json  .template_source_1391306826796240926.json
src/gitcord/: __main__.py  bot.py  config.py  events.py
src/gitcord/cogs/: __init__.py  admin.py  base_cog.py  channels.py  (+3 more)
tests/: test_rate_limiting.py
(+14 files in other folders)
