[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gitcord"
version = "0.6.0"
description = "A Discord bot for GitOps based server structure"
readme = "README.md"
license = "GPL-3.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    {name = "Evelyn", email = "evolvewithevan@gmail.com"}
]
dependencies = [
    "discord.py>=2.5.2",
    "python-dotenv==1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "PyYAML>=6.0.2",
    "pylint>=3.3.7",
    "setuptools>=80.9.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/evolvewithevan/gitcord"

[project.scripts]
gitcord = "gitcord.bot:run_bot"